Revision history for FusionInventory::Agent::Task::OcsDeploy 

1.0.8  Tue, 07 Sep 2010 17:59:43 +0200
       * Fix the P2P on Windows XP, remove the -4 parameter from the route
         cmd call
       * increase the timeout from 1 too 10 secondes. needed on Windows XP
       * debug: print the tested URL
       * ignore 169.x.x.x IP addresses
       * don't sleep for FRAG_LATENCY

1.0.7  Mon, 06 Sep 2010 12:22:40 +0200
       * Send err code SUCCESS_OK in case of success
       * Increase the size of the mask used to identify local
         network

1.0.6  Sun, 05 Sep 2010 01:23:23 +0200
       * Fix: store correctly file, not only directory,
         thanks Guillaume GARSON for the bug report
         http://forge.fusioninventory.org/issues/322

1.0.5  Thu, 12 Aug 2010 22:17:29 +0200
       * depends on 'threads', thanks Andreas Koenig
         https://rt.cpan.org/Ticket/Display.html?id=60286

1.0.4  Tue, 10 Aug 2010 18:00:16 +0200
       * Solaris: Fix free disk space detection

1.0.3  Fri, 28 May 2010 01:06:26 +0200
       * Add a test script: t/use.t
       * Win32 support
         - more LWP + thread
         - use bsd_glob
       * Makefile.PL: Drop duplicate Digest::MD5 entry in dependency list

1.0.2  Sun, 28 Mar 2010 21:39:55 +0200
       * Fix Storage calls

1.0.1  Fri, 26 Mar 2010 17:43:04 +0100
       * Use GPLv2+
        - Add LICENSE file

1.0    Thu, 25 Mar 2010 21:21:58 +0100
       * Initial release